# nlp-article-suggestion-system

./: .gitignore  README.md  README.rst  database (copy 1).py  fetchdata.py  pyproject.toml  pytest.ini  requirements.txt  run_main.sh  run_tests.sh  setup.sh
src/medium_clone_suggestion/: caching.py  config.py  data_access.py  database.py  feature_extraction.py  logger.py  main.py  recommendation_engine.py  similarity.py
src/medium_clone_suggestion/article_processor/: _pipeline.py  cli.py  database.py  main.py  models.py  pipeline.py  processing.py  utils.py
src/medium_clone_suggestion/article_processor/models/: lda_dictionary.dict  trained_lda.model  trained_lda.model.expElogbeta.npy  trained_lda.model.id2word  trained_lda.model.state
src/medium_clone_suggestion/user_processor/: README.md  config.py  database.py  processing.py  supabase_client.py  user_profile_builder.py
src/medium_clone_suggestion/user_processor/mockup/: local_user_profile_builder.py  mock_data.json  mock_supabase.py  mock_supabase_client.py  run_local.py  user_processed.txt
tests/: conftest.py  test_database.py  test_recommendation.py
tests/article_processor/: article_processor_test.py
tests/user_processor/: test_user_builder.py  test_user_processor.py
